# stark-bot-2

./: .dockerignore  .env.template  Cargo.toml  DEVOPS.md  Dockerfile  Dockerfile.dev  build_and_push_docker_v2.sh  docker-compose.yml  docker_run.sh
config/: bot_config.ron  starflask_seed.ron
modules/gog_cli/: install.sh  module.toml  uninstall.sh
seed-packs/: Cargo.toml
stark-backend/: Cargo.toml
stark-backend/src/: agent_registry.rs  command_router.rs  config.rs  main.rs  rpc_config.rs  starflask_bridge.rs
stark-backend/src/ai/: openai.rs
stark-backend/src/backup/: mod.rs  restore.rs
stark-backend/src/controllers/: api_keys.rs  auth.rs  execute.rs  health.rs  intrinsic.rs  memory.rs  mod.rs  starflask.rs  well_known.rs
stark-backend/src/crypto/: auth.rs  bridge_usdc.rs  broadcast_tx.rs  helpers.rs  mod.rs  send_eth.rs  sign.rs  swap_token.rs  token_utils.rs  web3_call.rs  x402_ops.rs
stark-backend/src/crypto_executor/: instruction.rs  mod.rs
stark-backend/src/db/: cache.rs  mod.rs  sqlite.rs
stark-backend/src/db/tables/: mod.rs  starflask_agents.rs
stark-backend/src/gateway/: actix_ws.rs  mod.rs  protocol.rs
stark-backend/src/models/: bot_config.rs  mod.rs  starflask_seed.rs
stark-backend/src/modules/: manifest.rs
stark-backend/src/tools/builtin/core/: manage_modules.rs
stark-backend/src/tools/builtin/cryptocurrency/: select_web3_network.rs
stark-backend/src/tx_queue/: mod.rs
stark-backend/src/wallet/: env_provider.rs
stark-backend/src/web3/: mod.rs
stark-backend/src/x402/: client.rs  erc20.rs  mod.rs  signer.rs
(+34 files in other folders)
