[package]
name = "stark-backend"
version = "2.0.2"
edition = "2024"

[dependencies]
# Web framework
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
url = "2"
urlencoding = "2"
hex = "0.4"
rand = "0.8"
getrandom = "0.2"
base64 = "0.22"
regex = "1"

# WebSocket
actix-ws = "0.3"
futures-util = "0.3"

# Concurrent state management
dashmap = "5"

# Static initialization
once_cell = "1"
parking_lot = "0.12"
lazy_static = "1.4"

# Ethereum / crypto
ethers = "2.0"

# ECIES encryption for cloud backup
ecies = "0.2"

# Hashing (ERC-8128, OAuth)
sha2 = "0.10"
hmac = "0.12"

# In-memory cache
moka = { version = "0.12", features = ["sync"] }

# Enum utilities (Network enum in rpc_config)
strum = { version = "0.26", features = ["derive"] }

# Starflask AI orchestration
starflask = "0.1.3"

[dev-dependencies]
tempfile = "3"
